# SduiAPI

./: .gitignore  CONTRIBUTING.md  LAST_DOWNLOAD  LICENSE  README.md  data.json  deutsch.json  index.md  index.ts  json.drawio  lessonsToday.json  main.py  package-lock.json  package.json  packet.py  reference.py  test.py  test.txt  testpacket.py  tsconfig.json  types.ts  usage.md
LanguageSupport/jsbundle/: readme.txt  sduiapi.js
googlecalendarapis/: packet.py  test.py  timezones.json
googlecalendarapis/AutoUpdater/: autoupdater.py  packet.py  secrets.py
pypi_package/: .gitignore  build.bat  setup.cfg  structure.txt
pypi_package/src/sdui_api/: __init__.py  classes.py  wrapper.py
pypi_package/src/sduiapi_CENSEDEV.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdui-api-google-calendar-extention/: quickstart.py
sdui_api_cli/: main.py
sdui_api_google_calendar_extention/: main.py  quickstart.py
sdui_api_wrapper/: __init__.py  packet.py  setup.py
sdui_api_wrapper/sduiapi/: README.md  packet.py  setup.py
sdui_api_wrapper/sduiapi/sduiapi/: sduiapi.py
sdui_dart_api/lib/sdui_dart_api/: pubspec.yaml
