[metadata]
name = sduiapi-CENSEDEV
version = 0.1.1
author = CenseDev
author_email = anniken@mooonshine.net
description = A simple API WRAPPER for SDUI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AnnikenYT/SduiAPI
project_urls =
    Bug Tracker = https://github.com/AnnikenYT/SduiAPI/issues
    Discord = https://discord.gg/vUeRha7mNA
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src